[package]
name = "libloot-cpp"
description = "A C++ wrapper around libloot."
publish = false
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cxx = { version = "1.0", features = ["c++17"] }
delegate = "0.13.4"
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true
