[package]
name = "libloot-cpp"
description = "A C++ wrapper around libloot."
publish = false
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cxx = { version = "1.0.142", features = ["c++17"] }
delegate = ">= 0.5.1, < 0.14"
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }

[build-dependencies]
cxx-build = "1.0.142"

[lib]
crate-type = ["staticlib"]

[lints]
workspace = true
