[package]
edition = "2021"
name = "libloot-nodejs"
version = "0.27.0"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.1.3", default-features = false, features = ["napi4"] }
napi-derive = "3.1.1"

[build-dependencies]
napi-build = "2.2.3"

[lints]
workspace = true
