[package]
name = "libloot-nodejs"
description = "An experimental Node.js wrapper around libloot."
publish = false
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }

# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.1.6", default-features = false, features = ["napi4"] }
napi-derive = "3.2.2"

[build-dependencies]
napi-build = "2.2.3"

[lints]
workspace = true
