[package]
name = "parameterized-test"
description = "Procedural macros to support parameterized testing in libloot."
categories = ["development-tools::testing"]
version.workspace = true
repository.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }

[lib]
proc-macro = true

[lints]
workspace = true
