[package]
name = "libloot-python"
version = "0.27.0"
edition = "2024"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loot"
crate-type = ["cdylib"]

[dependencies]
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }
pyo3 = "0.25.0"
pyo3-log = "0.12.4"

[lints]
workspace = true
