[package]
name = "libloot-python"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loot"
crate-type = ["cdylib"]

[dependencies]
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }
pyo3 = "0.25.0"
pyo3-log = "0.12.4"

[lints]
workspace = true
