[package]
name = "libloot-python"
description = "An experimental Python wrapper around libloot."
publish = false
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loot"
crate-type = ["cdylib"]

[dependencies]
libloot = { path = ".." }
libloot-ffi-errors = { path = "../ffi-errors" }
pyo3 = ">= 0.23.3, < 0.26"
pyo3-log = "0.12"

[lints]
workspace = true
